--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,7 +70,7 @@ html, body {
 	height: 100%;
 }
 body {
-	background: #151515;
+	background: #190B28;
 	font-family: "lora-regular", serif;
 	font-size: 1.7rem;
 	line-height: 3rem;
@@ -90,7 +90,7 @@ a, a:visited {
 	transition: all 0.3s ease-in-out;
 }
 a:hover, a:focus, a:active {
-	color: #fed136;
+	color: #685762;
 	outline: 0;
 }
 
@@ -102,7 +102,7 @@ a:hover, a:focus, a:active {
  */
 h1, h2, h3, h4, h5, h6, .h01, .h02, .h03, .h04, .h05, .h06 {
 	font-family: "poppins-semibold", sans-serif;
-	color: #313131;
+	color: #190B28;
 	font-style: normal;
 	text-rendering: optimizeLegibility;
 	margin-bottom: 2.1rem;
@@ -189,7 +189,7 @@ blockquote:before {
 	font-size: 8rem;
 	line-height: 0px;
 	margin: 0;
-	color: #313131;
+	color: #190B28;
 	font-family: arial, sans-serif;
 	position: absolute;
 	top: 3rem;
@@ -301,7 +301,7 @@ ul.disc li::before {
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
-	background: #fed136;
+	background: #685762;
 	position: absolute;
 	left: -17px;
 	top: 11px;
@@ -309,7 +309,7 @@ ul.disc li::before {
 }
 dt {
 	margin: 0;
-	color: #fed136;
+	color: #685762;
 }
 dd {
 	margin: 0 0 0 2rem;
@@ -331,7 +331,7 @@ th, td {
 	border-bottom: 1px solid #E8E8E8;
 }
 th {
-	color: #313131;
+	color: #190B28;
 	font-family: "poppins-bold", sans-serif;
 }
 td {
@@ -429,7 +429,7 @@ img.pull-left {
 	display: none;
 }
 .pace .pace-progress {
-	background: #fed136;
+	background: #685762;
 	position: fixed;
 	z-index: 900;
 	top: 0;
@@ -450,7 +450,7 @@ img.pull-left {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: #151515;
+	background: #190B28;
 	z-index: 800;
 	height: 100%;
 	width: 100%;
@@ -472,7 +472,7 @@ img.pull-left {
 	border-top: 11px solid rgba(255, 255, 255, 0.1);
 	border-right: 11px solid rgba(255, 255, 255, 0.1);
 	border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-	border-left: 11px solid #fed136;
+	border-left: 11px solid #685762;
 	-webkit-animation: load 1.1s infinite linear;
 	animation: load 1.1s infinite linear;
 	display: block;
@@ -525,7 +525,7 @@ select {
 	border: 0;
 	outline: none;
 	vertical-align: middle;
-	color: #313131;
+	color: #190B28;
 	font-family: "poppins-regular", sans-serif;
 	font-size: 1.5rem;
 	line-height: 3rem;
@@ -594,8 +594,8 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-	color: #fed136;
-	border-bottom: 1px solid #fed136;
+	color: #685762;
+	border-bottom: 1px solid #685762;
 }
 label, legend {
 	font-family: "poppins-bold", sans-serif;
@@ -661,7 +661,7 @@ input[type="button"] {
 	padding: 0 3rem;
 	margin: 0 .3rem 1.2rem 0;
 	background: #d8d8d8;
-	color: #313131;
+	color: #190B28;
 	text-decoration: none;
 	cursor: pointer;
 	text-align: center;
@@ -694,7 +694,7 @@ button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
-	background: #313131;
+	background: #190B28;
 	color: #FFFFFF;
 }
 .button.button-primary:hover,
@@ -726,7 +726,7 @@ button.large, .button.large {
 }
 button.stroke, .button.stroke {
 	background: transparent !important;
-	border: 3px solid #313131;
+	border: 3px solid #190B28;
 	line-height: 4.8rem;
 }
 button.stroke.medium, .button.stroke.medium {
@@ -736,8 +736,8 @@ button.stroke.large, .button.stroke.large {
 	line-height: 5.4rem !important;
 }
 button.stroke:hover, .button.stroke:hover {
-	border: 3px solid #fed136;
-	color: #fed136;
+	border: 3px solid #685762;
+	color: #685762;
 }
 button::-moz-focus-inner, input::-moz-focus-inner {
 	border: 0;
@@ -804,7 +804,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	line-height: 6rem;
 	text-indent: 0;
 	background: transparent;
-	color: #313131;
+	color: #190B28;
 }
 
 /**
@@ -925,7 +925,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: #252525;
 }
 .stats-tabs li a:hover {
-	color: #fed136;
+	color: #685762;
 }
 .stats-tabs li a em {
 	display: block;
@@ -956,14 +956,14 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	left: 0;
 	top: -3rem;
 	font-family: "poppins-bold", sans-serif;
-	color: #313131;
+	color: #190B28;
 	text-transform: uppercase;
 	letter-spacing: .2rem;
 	font-size: 1.5rem;
 	line-height: 2.4rem;
 }
 .skill-bars li .progress {
-	background: #313131;
+	background: #190B28;
 	position: relative;
 	height: 100%;
 }
@@ -976,7 +976,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: white;
 	font-size: 1.1rem;
 	line-height: 1;
-	background: #313131;
+	background: #190B28;
 	padding: .6rem .6rem;
 	border-radius: 3px;
 }
@@ -987,7 +987,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	margin-left: -5px;
 	border-right: 5px solid transparent;
 	border-left: 5px solid transparent;
-	border-top: 5px solid #313131;
+	border-top: 5px solid #190B28;
 	content: "";
 }
 
@@ -1036,12 +1036,12 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .section-intro h1 {
 	font-family: "poppins-semibold", serif;
 	font-size: 3.6rem;
-	color: #313131;
+	color: #190B28;
 	line-height: 1.25;
 	margin-bottom: 1.2rem;
 }
 .section-intro h5 {
-	color: #fed136;
+	color: #EFA9AE;
 	font-size: 1.6rem;
 	line-height: 1.875;
 	margin-bottom: 0.3rem;
@@ -1138,7 +1138,7 @@ header .logo a {
 }
 .menu-toggle span {
 	display: block;
-	background-color: #fed136;
+	background-color: #685762;
 	width: 24px;
 	height: 3px;
 	margin-top: -1.5px;
@@ -1196,7 +1196,7 @@ header .logo a {
 	background-color: rgba(255, 0, 119, 0);
 }
 .menu-toggle.is-clicked span::before, .menu-toggle.is-clicked span::after {
-	background-color: #fed136;
+	background-color: #685762;
 	-moz-transition-delay: 0s, 0.2s;
 	-o-transition-delay: 0s, 0.2s;
 	-webkit-transition-delay: 0s, 0.2s;
@@ -1252,12 +1252,12 @@ header .logo a {
 	border: none;
 }
 .main-navigation li a:hover {
-	color: #fed136;
+	color: #685762;
 	padding-left: 1rem;
 }
 .main-navigation li.current > a {
 	background: none;
-	color: #fed136;
+	color: #685762;
 }
 
 /**
@@ -1335,7 +1335,7 @@ header .logo a {
 	text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .intro-content h5 {
-	color: #fed136;
+	color: #EFA9AE;
 	font-family: "poppins-bold", sans-serif;
 	font-size: 2.3rem;
 	line-height: 1.565;
@@ -1383,7 +1383,7 @@ header .logo a {
 	letter-spacing: .25rem;
 }
 .intro-content .button:hover, .intro-content .button:focus {
-	border-color: #fed136;
+	border-color: #685762;
 }
 .intro-content .button::after {
 	display: inline-block;
@@ -1536,7 +1536,7 @@ header .logo a {
 }
 .about-content .info-list li strong {
 	font-family: "poppins-bold", sans-serif;
-	color: #313131;
+	color: #190B28;
 	text-transform: uppercase;
 	letter-spacing: .2rem;
 	font-size: 1.5rem;
@@ -1628,7 +1628,7 @@ header .logo a {
 	text-align: center;
 }
 #resume .resume-header h2 {
-	color: #fed136;
+	color: #685762;
 }
 
 #resume .resume-timeline {
@@ -1657,7 +1657,7 @@ header .logo a {
 	height: 4.8rem;
 	width: 4.8rem;
 	line-height: 4.8rem;
-	background: #313131;
+	background: #190B28;
 	border-radius: 50%;
 	text-align: center;
 	color: #FFFFFF;
@@ -1956,7 +1956,7 @@ header .logo a {
 	border-right: 1px solid rgba(200, 200, 200, 0.1);
 }
 .popup-modal .link-box a:hover {
-	background: #fed136;
+	background: #685762;
 	border: none;
 }
 @media only screen and (max-width:600px) {
@@ -2067,7 +2067,7 @@ header .logo a {
 	margin-left: -40px;
 }
 .section-ads h2 a, .section-ads h2 a:visited {
-	color: #313131;
+	color: #190B28;
 }
 .section-ads span {
 	color: #3F0D39;
@@ -2095,7 +2095,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #services {
-	background: #151515;
+	background: #190B28;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -2113,7 +2113,7 @@ header .logo a {
 	color: white;
 }
 #services .section-intro h5 {
-	color: #fed136;
+	color: #EFA9AE;
 }
 #services .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2139,7 +2139,7 @@ header .logo a {
 }
 .services-list .icon i {
 	font-size: 5.4rem;
-	color: #fed136;
+	color: #685762;
 }
 .services-list h3 {
 	color: #FFFFFF;
@@ -2167,7 +2167,7 @@ header .logo a {
 	background: #FFFFFF;
 }
 .owl-theme .owl-controls .owl-page.active span {
-	background: #fed136;
+	background: #685762;
 }
 
 
@@ -2178,7 +2178,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #stats {
-	background: #fed136;
+	background: #685762;
 	padding-top: 7.2rem;
 	padding-bottom: 6rem;
 	text-align: center;
@@ -2245,7 +2245,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #contact {
-	background: #151515;
+	background: #190B28;
 	padding-top: 12rem;
 	padding-bottom: 7.2rem;
 }
@@ -2253,7 +2253,7 @@ header .logo a {
 	color: white;
 }
 #contact .section-intro h5 {
-	color: #fed136;
+	color: #EFA9AE;
 }
 #contact .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2298,7 +2298,7 @@ header .logo a {
 	color: #FFFFFF;
 }
 .contact-info h5 {
-	color: #fed136;
+	color: #EFA9AE;
 }
 .contact-info a {
 	color: rgb(110, 110, 110);
@@ -2375,7 +2375,7 @@ footer a, footer a:visited {
 	color: #FFFFFF;
 }
 footer a:hover, footer a:focus {
-	color: #fed136;
+	color: #685762;
 }
 footer .row {
 	max-width: 900px;
@@ -2454,7 +2454,7 @@ footer .copyright span:last-child::after {
 	width: 6rem;
 	line-height: 6.6rem;
 	text-align: center;
-	background: #fed136;
+	background: #685762;
 	color: #FFFFFF;
 	text-align: center;
 	text-transform: uppercase;
@@ -2478,7 +2478,7 @@ footer .copyright span:last-child::after {
     font-size: 4.4rem;
     color: #fff;
     position: relative;
-    background: #fed136;
+    background: #685762;
     border-radius: 50%;
     width: 90px;
     height: 90px;
